--- a/SignUp.html
+++ b/SignUp.html
@@ -47,7 +47,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.22.0/dist/sweetalert2.all.min.js"></script>
     <script src="./JS/bootstrap.bundle.min.js"></script>
-    <script src="./JS/SignUp.js"></script>
+    <script src="./JS/Signup.js"></script>
 </body>
 
 </html>
